<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/round"
    android:orientation="vertical"
    android:id="@+id/ln_plan">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/plan_img"
            android:layout_width="wrap_content"
            android:layout_height="380dp"
            android:src="@drawable/item_plan_1"/>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_p1_tv1"
            style="@style/h2"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/plan_txt"
            android:text="@string/plan_p1_tv2"/>
            <Button
                android:id="@+id/btn1"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:textSize="14dp"
                android:text="@string/plan_btn_1"
                android:backgroundTint="@color/gray"
                android:textColor="#6D6D6D"/>
    </LinearLayout>
</LinearLayout>