<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plan.PlanFragment"
    android:background="#fff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:background="@color/bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="15dp"
                android:id="@+id/user"
                style="@style/user"
                android:src="@drawable/user"/>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/user"
                style="@style/title"
                android:text="플랜"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recv_plan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <LinearLayout
            android:background="#fff"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_explain"
                style="@style/h2"/>

            <LinearLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ic_plan_1"
                        style="@style/plan_ic"
                        android:src="@drawable/ic_plan_1"/>
                    <TextView
                        android:id="@+id/tv1"
                        android:layout_below="@+id/ic_plan_1"
                        style="@style/plan_txt"
                        android:text="Nutrition &amp; WellnessTips"/>

                    <ImageView
                        android:id="@+id/ic_plan_2"
                        style="@style/plan_ic"
                        android:layout_marginTop="5dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="120dp"
                        android:src="@drawable/ic_plan_2" />

                    <TextView
                       android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignBaseline="@+id/tv1"
                        android:layout_below="@+id/ic_plan_2"

                        android:text="@string/plan_txt_2"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ic_plan_3"
                        style="@style/plan_ic"
                        android:src="@drawable/ic_plan_3"/>
                    <TextView
                        android:id="@+id/tv3"
                        android:layout_below="@+id/ic_plan_3"
                        android:layout_height="40dp"
                        android:layout_width="150dp"
                        android:text="Flexible Workout Schedules"/>

                    <ImageView
                        android:id="@+id/ic_plan_4"
                        style="@style/plan_ic"

                        android:layout_alignParentRight="true"
                        android:layout_marginRight="120dp"
                        android:src="@drawable/ic_plan_4" />

                    <TextView
                        android:layout_alignBaseline="@+id/tv3"
                        android:layout_below="@+id/ic_plan_4"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:text="Motivation &amp; Progress Updates"/>
                </RelativeLayout>
      </LinearLayout>
      <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
            style="@style/h2"
            android:text="Our Training Philosophy"/>
            <ImageView
                android:id="@+id/plan_video"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/plan_video"/>

          <TextView
              android:layout_margin="15dp"
              style="@style/plan_txt"
              android:layout_width="match_parent"
              android:text="@string/plan_ex_video" />


      </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>